# spaceminer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  testscene.cpp
include/Astrocore/: .gitignore  CMakeLists.txt  README.md
include/Astrocore/include/astrocore/component/: signaler.h  transform2D.h
include/Astrocore/include/astrocore/nodes/: node.h  shapenode.h  spritenode.h  treenode.h
include/Astrocore/include/astrocore/systems/: debug.h  game.h  scenetree.h
include/Astrocore/include/astrocore/systems/input/: input.h
include/Astrocore/include/astrocore/systems/rendering/: renderer.h  rendertarget.h
include/Astrocore/include/astrocore/systems/resources/: resourcemanager.h
include/Astrocore/src/component/: transform.cpp
include/Astrocore/src/nodes/: node.cpp  shapenode.cpp  spritenode.cpp
include/Astrocore/src/systems/: game.cpp  scenetree.cpp
include/Astrocore/src/systems/input/: input.cpp
include/Astrocore/src/systems/rendering/: renderer.cpp  rendertarget.cpp
include/Astrocore/src/systems/resources/: resourcemanager.cpp
